# moaxy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  pyproject.toml
.benchmarks/results/: m7-live-report.md  m7-live-run.json  m8-live-report.md  m8-live-run.json
plugins/demo_advisor/: __init__.py  plugin.py
plugins/demo_reflector/: __init__.py  plugin.py
plugins/demo_router/: __init__.py  plugin.py
plugins/demo_transformer/: __init__.py  plugin.py
src/moaxy/: __init__.py
src/moaxy/adapters/: __init__.py  base.py  ollama.py  openrouter.py  registry.py
src/moaxy/benchmark/: __init__.py  configs.py  harness.py  prompts.py  report.py  run.py
src/moaxy/config/: __init__.py  envsubst.py  loader.py
src/moaxy/models/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_adapters_registry.py  test_admin.py  test_advisor.py  test_aliases.py  test_auth_admin.py  test_benchmark.py  test_config.py  test_config_loader.py  test_cross_area.py  test_delta5.py  test_demo_reflector_advisor.py  test_errors.py  test_fallback.py  test_fallbacks.py  test_matcher.py  test_message_builders.py  test_ollama_adapter.py  test_openrouter_adapter.py  test_orchestrator.py  test_orchestrator_parallel.py  test_parallel.py  test_pipeline_context.py  test_plugin_async_extension.py  test_plugin_manager_dispatch.py  test_plugins.py  test_prompts.py  test_reflection.py  test_reflector.py  test_server.py  test_server_orchestrator_integration.py  test_server_smoke.py  test_streaming.py
tests/fixtures/: __init__.py  fake_adapter.py
(+29 files in other folders)
