[project]
name = "moaxy"
version = "0.1.0"
description = "Mixture of Agent proxy"
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
